--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^3.2.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "npm": "^8.19.1",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
